# SpaceRoboticsA3

./: .gitignore  README.md  how_to.txt  test.txt
cave_explorer/: CMakeLists.txt  package.xml
cave_explorer/config/: base_local_planner_params.yaml  cave_explorer.rviz  costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  turtlebot3_lds_2d.lua  turtlebot3_lds_2d_gazebo.lua
cave_explorer/launch/: cave_explorer_autonomy.launch  cave_explorer_empty.launch  cave_explorer_navigation.launch  cave_explorer_startup.launch
cave_explorer/src/: artifact_localisation_and_display.py  cave_explorer.py  exploration_management.py  object_dectection.py
cave_explorer/urdf/: common_properties.xacro  mars_explorer.gazebo.xacro  mars_explorer.urdf.xacro
cave_explorer/worlds/: emptymars.world  mars1.world
cave_explorer/worlds/models/artifact1/: model.config  model.sdf
cave_explorer/worlds/models/asphalt_plane/: model-1_4.sdf
cave_explorer/worlds/models/curiosity/: model.config  model.sdf
cave_explorer/worlds/models/mars_plane/: model.sdf
cave_explorer/worlds/models/mars_plane/materials/scripts/: mars.material
cave_explorer/worlds/models/walls/: model.config
cave_explorer/worlds/models/walls/materials/scripts/: walls.material
image_recognition/: bg.txt  description.py  image_saver.py  image_testing.py  neg_des.txt  pos_spherev2.lst  pos_spherev2.vec
image_recognition/data_sphere/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
image_recognition/data_spherev2/: cascade.xml  params.xml  stage0.xml  (+5 more)
(+1 files in other folders)
