<package format="2">

    <name>cave_explorer</name>
    <version>0.0.1</version>
    <description>49274 Project</description>
    <maintainer email="graeme.best@uts.edu.au">Graeme Best</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>std_srvs</depend>
    <depend>actionlib</depend>
    <depend>move_base_msgs</depend>
    <depend>turtlebot3_description</depend>
    
    
    
    <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>

</package>
